--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "include": [".eslintrc.cjs", "src/*"]
+  "include": [".eslintrc.cjs", "postcss.config.cjs", "tailwind.config.cjs", "src/**/*"]
 }
